# socks

./: Cargo.toml  README.md  build.rs
src/: buffer.rs  buffer_pool.rs  buffer_test.rs  cache.rs  chunk.rs  chunk_test.rs  database.rs  database_test.rs  error.rs  filelike.rs  index.rs  index_test.rs  key.rs  lib.rs  main.rs  mod.rs  query.rs  schema.rs  stats.rs  table.rs  table_test.rs  test  test.cc  transform.rs  transform_test.rs  validate.rs  validations.rs
src/b_tree/: cormen_insert.rs  mod.rs  read.rs
src/bp_tree/: insert_aggressive_split.rs  mod.rs  read.rs  read_binary_search.rs  read_sequential.rs  unbalanced_delete.rs
src/file/: chunk.rs  chunk_test.rs  directory.rs  directory_test.rs  metadata.rs  mod.rs  row_data.rs  row_data_test.rs
src/parse/: mod.rs  transform.rs  transform_test.rs  validate.rs
src/protos/: chunk.proto  config.proto  mod.rs  operations.proto  schema.proto
src/query/: filter.rs  intersect.rs  mod.rs  reader.rs  select.rs  writer.rs
src/table/: cache.rs  chunk.rs  chunk_test.rs  mod.rs  table.rs  table_test.rs  transform.rs  transform_test.rs  validate.rs
src/table/bp_tree/: insert_aggressive_split.rs  mod.rs  read_binary_search.rs  read_sequential.rs
src/table/file/: chunk.rs  chunk_test.rs  metadata.rs  mod.rs  row_data.rs
src/table/parse/: transform.rs  transform_test.rs  validate.rs
test/: db.socks  test_operations.textproto  test_schema.textproto
