[package]
name = "socks"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
protobuf = "3.7.1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
protoc-bin-vendored = "3.1.0"
protobuf-codegen = "3.7.1"
